--- a/prompts/neuro/intro.md.jinja
+++ b/prompts/neuro/intro.md.jinja
@@ -4,6 +4,6 @@
 
 任务指示：你需要通过和 Neuro 对话来获取 Flag 的内容。目前可以透露的消息是，这个 Flag 是包含在 user message 中的，所以要获取的话会稍微简单点。
 
-本题出现的各人物仅作为情景阐释，和 vedal.ai 及其关联者无关。提示词内容简单，无法完全还原 Neuro 的性格特点。
+本题出现的各人物仅作为情景阐释，和 vedal.ai 及其关联者无关。提示词内容简单，无法还原 Neuro 的性格特点，请勿当真。
 
 关注 Vedal 喵，关注 Vedal 谢谢喵！
